# NiceMemoryCards

./: CMakeLists.txt  readme.txt
src/: main.cpp  mainFrame.cpp  mainFrame.h  menu.cpp  menu.h
usefulClasses/: myRandom.cpp  myRandom.h
